...
    }

    init(demoData: Bool = false) {

        if demoData {

            var tramA = Line(number: 1, name: "Tram A", stops: [], length: 0, kind: .tram(capacity: 300))
            let arret1 = Stop(name: "Les Pins", latitude: 0.0, longitude: 0.0, address: "")
            let arret2 = Stop(name: "Frères Robinson", latitude: 0.0, longitude: 0.0, address: "")
            let arret3 = Stop(name: "Hotel de ville Mérignac", latitude: 0.0, longitude: 0.0, address: "")
            let arret4 = Stop(name: "Pin Galant", latitude: 0.0, longitude: 0.0, address: "")
            let arret5 = Stop(name: "Mérignac Centre", latitude: 0.0, longitude: 0.0, address: "")

            tramA.stops = [arret1, arret2, arret3, arret4, arret5]

...
